--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,569 @@
-root{
-  --color-bg-green: #849d8f;
+:root {
+  --bg-color: white;
+  --main-color: #444;
+  --dark-color: #2c2c2c;
+  --shadow-lightgray: rgba(0, 0, 0, 0.07);
+  --shadow-gray: rgba(0, 0, 0, 0.17);
+
+  /*навигация*/
+  --nav-bg: white;
+  --nav-link: #5a5a5a;
+  --nav-link-hover: #000;
+  --nav-shadow: rgba(0, 0, 0, 0.12);
+
+  /*контакты*/
+  --contact-gmail: #ea4335;
+  --contact-phone: #31d059;
+  --contact-telegram: #24a2e0;
+  --contact-skype: #00b0ef;
+  --contact-linkedin: #0a66c2;
+  --contact-github: #161b22;
+  --contact-github-hover: #416487;
+
+  /*main*/
+  --main-header-border: #e3e3e3;
+  --main-header-fun: lightgray;
+  /*--main-header-fun: darkgray;*/
+
+  /* dark */
+  --light-gray: #c9c9c9;
+  --light-bluegray: #607D8B;
+  --bluegray: #546E7A;
+  --dark-bluegray: #455A64;
+  --dark-navygray: #37474F;
+  /* sizes */
+  --main-width: 960px;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2) format('woff2'), url('font-roboto/roboto.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-img {
-  max-width: 100%;
-  height: auto;
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2) format('woff2'), url('font-roboto/robotomedium.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfABc4EsA.woff2) format('woff2'), url('font-roboto/robotobold.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fBBc4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+@media (min-width: 320px) {
+  .apple { --fruit-color: orange; }
 }
 
 body {
-  margin: 0 auto;
-  padding: 0 27px;
-
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 400;
-
-  background-color: white;
-}
-
-html { box-sizing: border-box; }
-*, *::before, *::after {box-sizing: inherit;}
-
-/*
-header, footer { outline: 2px solid yellow; }
-nav { outline: 2px solid blue; }
-main { outline: 2px solid green; }
-article { outline: 2px solid green; }
-section { outline: 2px solid red; padding: 3px; }
-ul  { outline: 2px solid navy; }
-div  { outline: 2px solid lightgray; }
-*/
-
-.projects {
-  width: calc(100vw - 54px);
-}
-
-.projects section {
+  min-width: var(--main-width);
   display: flex;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  margin-bottom: 50px;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+
+  color: var(--main-color);
+  font-size: 1.2em;
+  font-family: "Roboto", Arial, sans-serif;
+  line-height: 1.5;
+  background-color: var(--bg-color);
+}
+
+
+h3 {
+  position: relative;
+  margin: 2em 0;
+  font-size: 2em;
+  text-align: left;
+  border-bottom: 2px solid var(--main-header-border);
+}
+
+h3.fun span{
+  position: absolute;
+  right: 0;
+  font-size: 0.5em;
+  color: var(--main-header-fun);
+  bottom: -2em;
+}
+
+.hidden {
+  display: none;
+}
+.d-flex {
+  display: flex;
+}
+.f-align-center {
+  align-items: center;
+}
+.f-jc-between {
+  justify-content: space-between;
+}
+.f-grow {
+  flex-grow: 1;
+}
+
+.mx-1 {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+.mx-2 {
+  margin-left: 2em;
+  margin-right: 2em;
+}
+.mr-1 {
+  margin-right: 1em;
+}
+.ml-1 {
+  margin-left: 1em;
+}
+.mr-2 {
+  margin-right: 2em;
+}
+.ml-2 {
+  margin-left: 2em;
+}
+
+/* --- Навигация --- */
+
+nav.main {
+  width: 100%;
+  position: fixed;
+  background: var(--nav-bg);
+  z-index: 1;
+  box-shadow: 0 2px 5px 0 var(--shadow-gray), 0 2px 10px 0 var(--nav-shadow);
+}
+nav.main ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0.5em 0;
+  list-style: none;
+}
+nav.main li {
+  /*margin: 0px 10px;*/
+}
+nav.main a {
+  display: block;
+  width: 9em;
+  padding: 0.5em 1em;
+  color: var(--nav-link);
+  font-size: 0.9em;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+}
+nav.main .home a {
+  width: 4em;
+  padding: 0;
+}
+nav.main .home .fa-home:before {
+  font-size: 2em;
+  position: relative;
+  top: 0.1em;
+  padding-bottom: 0.1em;
+}
+nav.main .home.active .fa-home:before {
+  border-bottom: 1px solid var(--nav-link);
+}
+
+
+nav.main a span {
+  padding: 0.5em 0;
+}
+nav.main a span:last-child {
+  display: none;
+}
+nav.main a span:last-child::before,
+nav.main a span:last-child::after {
+  position: absolute;
+}
+nav.main a span:last-child::before {
+  content: '{{ ';
+  margin-left: -1.5em;
+}
+nav.main a span:last-child::after {
+  content: ' }}';
+  margin-left: 0.5em;
+}
+
+nav.main .active span:first-child {
+  border-bottom: 1px solid var(--nav-link);
+}
+
+nav.main .active a,
+nav.main a:hover {
+  color: var(--nav-main-link);
+}
+nav.main a:hover span:first-child {
+  display: none;
+}
+nav.main a:hover span:last-child {
+  display: inline;
+}
+
+
+
+/* --- Шапка --- */
+
+.container {
+  width: var(--main-width);
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.header {
+  display: flex;
+  margin: 120px 0 30px;
+  padding: 20px;
+}
+.header img {
+  border-radius: 50%;
+  box-shadow: 0 0 0 20px var(--shadow-lightgray);
+  border: 20px solid var(--shadow-gray);
+  margin: 20px;
+  width: 250px;
+  height: 250px;
+}
+.header .name {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 40px;
+  overflow: hidden;
+  font-weight: 600;
+}
+.header .name h1 {
+  margin: 0 0 10px;
+  font-size: 3em;
+}
+.header .name h2 {
+  margin: 0 0 20px;
+  font-size: 1.5em;
+}
+
+.header .name ul {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  width: 300px;
+  list-style: none;
+  font-size: 1.1em;
+}
+.header .name li {
+  /*padding: 0.3em 1em 0.3em 0;*/
+}
+/* --- Ссылки на соц.сети и сервисы --- */
+.header .name a {
+  display: block;
+  padding: 0.5em;
+  text-decoration: none;
+  border: 1px dashed var(--bg-color);
+}
+.header .name a i {
+  /*margin-right: 0.5em;*/
+}
+
+.contacts li a:hover {
+  border: 1px dashed;
+  border-radius: 8px;
+  filter: grayscale(75%);
+}
+
+.contacts li a.gmail {
+  color: var(--contact-gmail);
+}
+.contacts li a.phone {
+  color: var(--contact-phone);
+}
+.contacts li a.telegram {
+ color: var(--contact-telegram);
+}
+.contacts li a.skype {
+  color: var(--contact-skype);
+}
+.contacts li a.linkedin {
+  color: var(--contact-linkedin);
+}
+.contacts li a.github {
+  color: var(--contact-github);
+}
+.contacts li a.github:hover {
+  color: var(--contact-github-hover);
+}
+.contacts li.big {
+  position: absolute;
+  top: 6px;
+  right: -150px;
+}
+.header .name li.big a {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.header .name li.big  i {
+  font-size: 2em;
+  margin: 0;
+}
+
+
+
+main {
+  flex-grow: 1;
+}
+
+main section {
+  margin-bottom: 5em;
+}
+
+#skills {
+    position: relative;
+}
+#skills:before {
+    z-index:-1;
+    position: absolute;
+    right: 0;
+    top: 60%;
+    opacity:0.2;
+    content: '';
+    width: 33%;
+    height: 33%;
+    background-image: url(../img/laravel-old.svg);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: contain;
+}
+
+.link {
+  text-decoration: none;
+  border-bottom: 1px dashed var(--contact-linkedin);
+  color: var(--contact-linkedin);
+}
+.external-link {
+  text-decoration: none;
+  border-bottom: 1px solid var(--contact-linkedin);
+  color: var(--contact-linkedin);
+}
+.link:hover,
+.external-link:hover {
+  color: var(--contact-skype);
+  border-bottom: 1px solid var(--bg-color);
+}
+
+.qsoft-log li {
+  margin-bottom: 1em;
+}
+.qsoft-log time {
+  font-weight: 500;
+  display: block;
+}
+
+.list ul {
+  margin: 0;
+}
+
+.list > li {
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+  list-style: none;
   border-bottom: 1px dashed lightgray;
 }
+.list > li:last-child {
+  border-bottom: none;
+}
 
-.projects section .left {
+.list .date {
+  min-width: 110px;
+}
+.list .logo {
+  min-width: 288px;
+}
+
+.icon {
+  width: 5em;
+}
+.icon i {
+  position: relative;
+}
+.icon .fa-home,
+.icon .fa-laptop {
+  position: relative;
+}
+.icon .fa-home:before {
+  content: "\f015";
+  font-size: 2.7em;
+  color: gainsboro;
+}
+.icon .fa-laptop:before {
+  content: "\f109";
+  font-size: 2.4em;
+  color: darkorange;
+  position: absolute;
+  bottom: -16px;
+  left: -36px;
+}
+.icon .fa-laptop:after {
+  content: 'Remote Work';
+  color: gray;
+  font-weight: bold;
+  font-family: 'Roboto';
+  position: relative;
+  top: -1px;
+  left: -9px;
+}
+
+#education .logo {
+  min-width: 250px;
+  margin-right: 2em;
+}
+
+footer {
+  margin-top: 5em;
+  box-shadow: 0 -2px 5px 0 var(--shadow-gray), 0 -2px 10px 0 var(--nav-shadow);
+}
+footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+footer .container nav {
+  flex-grow: 1;
+}
+footer .container ul {
+  display: flex;
+  justify-content: space-around;
+  margin: 1em 0;
+  padding: 0;
+  list-style: none;
+}
+footer .container li a {
+  display: block;
+  padding: 0.5em 0.5em 0.2em;
+  border: 1px dashed var(--bg-color);
+  text-align: center;
+  text-decoration: none;
+}
+footer .container li i {
+  font-size: 1.5em;
+  margin: 0 0 0.3em;
+}
+
+.rotate{
+-webkit-transition-duration: 0.8s;
+-moz-transition-duration: 0.8s;
+-o-transition-duration: 0.8s;
+transition-duration: 0.8s;
+-webkit-transition-property: -webkit-transform;
+-moz-transition-property: -moz-transform;
+-o-transition-property: -o-transform;
+transition-property: transform;
+overflow: hidden;
+}
+.rotate:hover{
+cursor: pointer;
+-webkit-transform: rotate(360deg);
+-moz-transform: rotate(360deg);
+-o-transform: rotate(360deg);
+}
+
+/*-- old styles -- */
+
+#projects > div > ul > li {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 3px dashed lightgray;
+}
+
+#projects > div > ul > li section {
+  display: flex;
+}
+
+#projects > div > ul > li .left {
   margin-top: 7px;
   margin-right: 50px;
   width: 300px;
   min-width: 300px;
 }
-.projects section .left p {
+#projects > div > ul > li .left p {
   text-align: center;
 }
-.projects section .desc {
+#projects > div > ul > li .desc {
   box-sizing: content-box;
   overflow: auto;
   padding-left: 5px;
 }
-.projects section .desc h2 {
+#projects > div > ul > li .desc h2 {
   margin-top: 0;
   line-height: 1.2em;
 }
-.projects section .desc h2 svg {
+#projects > div > ul > li .desc h2 svg {
   position: relative;
   top: 4px;
 }
 
 
-.projects section .desc .maket {
+#projects > div > ul > li .desc .maket {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
 
   margin: 16px 0;
 }
-.projects section .desc .maket img {
+#projects > div > ul > li .desc .maket img {
   min-width: 250px;
   max-width: 500px;
   margin: 5px;
   padding: 3px;
   outline: 1px solid darkgray;
 }
-.projects section .desc .maket img:hover {
+#projects > div > ul > li .desc .maket img:hover {
   /*outline: 1px solid #607d8b;*/
   box-shadow: 1px 1px 7px 0px darkgray;
   cursor: pointer;
 }
 
-.projects summary {
+#projects > div > ul > li summary {
   display: inline-block;
   cursor: pointer;
 }
 
-.projects ul {
+#projects > div > ul > li ul {
   margin: 0;
   padding: 0;
   list-style: none;
