--- a/css/basis.css
+++ b/css/basis.css
@@ -1,55 +1,226 @@
-/*! basis.css v1.0.3 | MIT License | avxodiar@gmail.com */
-html, body {
+:root {
+  --bg-color: white;
+  --main-color: #444;
+  --dark-color: #2c2c2c;
+  --shadow-lightgray: rgba(0, 0, 0, 0.07);
+  --shadow-gray: rgba(0, 0, 0, 0.17);
+
+  /*навигация*/
+  --nav-bg: white;
+  --nav-link: #5a5a5a;
+  --nav-link-hover: #000;
+  --nav-shadow: rgba(0, 0, 0, 0.12);
+
+  /*контакты*/
+  --contact-gmail: #ea4335;
+  --contact-phone: #31d059;
+  --contact-telegram: #24a2e0;
+  --contact-skype: #00b0ef;
+  --contact-linkedin: #0a66c2;
+  --contact-github: #161b22;
+  --contact-github-hover: #416487;
+
+  /*main*/
+  --main-header-border: #e3e3e3;
+  --main-header-fun: lightgray;
+  /*--main-header-fun: darkgray;*/
+
+  /* dark */
+  --light-gray: #c9c9c9;
+  --light-bluesteel :#4682B4; /*steelblue*/
+  --light-bluegray: #607D8B;
+  --bluegray: #546E7A;
+  --dark-bluegray: #455A64;
+  --dark-navygray: #37474F;
+
+  /* sizes */
+  --main-width: 960px;
+}
+
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2) format('woff2'), url('font-roboto/roboto.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2) format('woff2'), url('font-roboto/robotomedium.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfABc4EsA.woff2) format('woff2'), url('font-roboto/robotobold.woff') format('woff');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fBBc4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+.d-flex {
+  display: flex;
+}
+.f-align-center {
+  align-items: center;
+}
+.f-jc-between {
+  justify-content: space-between;
+}
+.f-grow {
+  flex-grow: 1;
+}
+
+.m0 {
   margin: 0;
-  padding: 0;
 }
-img {
-  max-width: 100%;
-  height: auto;
+.mt0 {
+  margin-top: 0;
 }
-
-/* общее правило для box-sizing с помощью "inherit" */
-html { box-sizing: border-box; }
-*, *::before, *::after {box-sizing: inherit;}
-
-/* для корректного отображения шрифта в полях ввода*/
-input[type=text], input[type=password] {
-  font: inherit;
+.mx-1 {
+  margin-left: 1em;
+  margin-right: 1em;
 }
-
-/*псевдораспорка. устанавливается в родительский блок*/
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
+.mx-2 {
+  margin-left: 2em;
+  margin-right: 2em;
 }
-
-/*визуально скрытое, с поддержкой скринридеров*/
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-  position:absolute;
-
-  width:1px;
-  height:1px;
-  margin:-1px;
-  border:0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip:rect(0 0 0 0);
-  overflow:hidden;
+.mr-1 {
+  margin-right: 1em;
+}
+.ml-1 {
+  margin-left: 1em;
+}
+.mr-2 {
+  margin-right: 2em;
+}
+.ml-2 {
+  margin-left: 2em;
 }
 
-/*оверлей для модальных окон*/
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left:0;
-  width: 100%;
-  height: 100%;
+/* всплывающие подсказки */
 
-  background-color: rgba(0,0,0,0.5);
+.tooltip {
+  position: relative;
+}
+.tooltip::before,
+.tooltip::after {
+  text-transform: none;
+  font-size: .9em;
+  line-height: 1;
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  display: none;
+  opacity: 0;
+}
+.tooltip::before {
+  content: '';
+  border: 5px solid transparent;
+  z-index: 1001;
+}
+.tooltip::after {
+  content: '';
+  text-align: center;
+  min-width: 3em;
+  max-width: 21em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1ch 1.5ch;
+  border-radius: .3ch;
+  box-shadow: 0 1em 2em -.5em rgba(0, 0, 0, 0.35);
+  background: #607D8B;
+  color: #fff;
   z-index: 1;
+}
+.tooltip::before,
+.tooltip::after {
+  left: 50%;
+  transform: translate(-50%, -.5em);
+}
+.tooltip::before {
+  bottom: 100%;
+  border-bottom-width: 0;
+  border-top-color: #607D8B;
+}
+.tooltip::after {
+  bottom: calc(100% + 5px);
+}
+
+.tooltip:hover::before,
+.tooltip:hover::after {
+  display: block;
+  animation: tooltips-vert 300ms ease-out forwards;
+}
+@keyframes tooltips-vert {
+  to {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+}
+
+/* текст подсказок, пример:
+  <span tooltip="info">arger</span>
+*/
+.tooltip.attr-tip::after {
+  content: attr(tooltip);
+}
+.tooltip.tip-source::after {
+  content: 'Посмотреть исходники';
+}
+.tooltip.tip-site::after {
+  content: 'Посмотреть сайт';
+}
+.tooltip.tip-sertificate::after {
+  content: 'Посмотреть сертификат';
+}
+.tooltip.tip-orig::after {
+  content: 'Перейти к оригиналу';
+}
+.tooltip.tip-course::after {
+  content: 'Перейти к списку курсов';
+}
+
+/* вращение иконки */
+.rotate{
+-webkit-transition-duration: 0.8s;
+-moz-transition-duration: 0.8s;
+-o-transition-duration: 0.8s;
+transition-duration: 0.8s;
+-webkit-transition-property: -webkit-transform;
+-moz-transition-property: -moz-transform;
+-o-transition-property: -o-transform;
+transition-property: transform;
+overflow: hidden;
+}
+.rotate:hover{
+cursor: pointer;
+-webkit-transform: rotate(360deg);
+-moz-transform: rotate(360deg);
+-o-transform: rotate(360deg);
 }
