--- a/css/basis.css
+++ b/css/basis.css
@@ -44,6 +44,7 @@
   font-weight: 400;
   src: url(font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2) format('woff2'), url('font-roboto/roboto.woff') format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -51,6 +52,7 @@
   font-weight: 500;
   src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2) format('woff2'), url('font-roboto/robotomedium.woff') format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -58,6 +60,7 @@
   font-weight: 700;
   src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfABc4EsA.woff2) format('woff2'), url('font-roboto/robotobold.woff') format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 
 /* latin */
@@ -67,6 +70,7 @@
   font-weight: 400;
   src: url(font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -74,6 +78,7 @@
   font-weight: 500;
   src: url(font-roboto/KFOlCnqEu92Fr1MmEU9fBBc4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
@@ -81,6 +86,7 @@
   font-weight: 700;
   src: url(font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-display: swap;
 }
 
 .d-flex {
