Очистка страниц от неиспользуемых элементов и скриптов, предзагрузка стилей

--- a/css/avx-normalize.css
+++ b/css/avx-normalize.css
@@ -1,4 +1,6 @@
-/*! avx-normalize-min.v8.0.1-5 | Based on normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*! avx-normalize-min.v8.0.1-5 */
+/*! Based on normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 html, body {
   margin: 0;
   padding: 0;
