--- a/css/basis.css
+++ b/css/basis.css
@@ -8,7 +8,9 @@
   /*навигация*/
   --nav-bg: white;
   --nav-link: #5a5a5a;
+  --nav-link-active: #000;
   --nav-link-hover: #000;
+  --nav-lightgray: #d0d0d0;
   --nav-shadow: rgba(0, 0, 0, 0.12);
 
   /*контакты*/
