--- a/css/index.css
+++ b/css/index.css
@@ -549,9 +549,8 @@ footer .container li i {
 
 .grid figure h4 {
   position: relative;
-}
-
-.grid figure h4 {
+  display: flex;
+  justify-content: space-between;
   margin: 0;
   margin-top: -2.5em;
 }
